[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kio-apheris"
version = "0.1.0"
description = "A simplistic ML use case for machine parameter prediction."
readme = "README.md"
authors = [{ name = "Alexander Nasuta", email = "alexander.nasuta@wzl-iqs.rwth-aachen.de" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["pytorch", "ML", "regression", "machine", "parameter", "prediction"]
requires-python = ">3"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["openhub"]
package-dir = { "" = "src" }
zip-safe = false

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }

[tool.setuptools.package-data]
phantomderopfa = ["py.typed"]


[project.urls]
Homepage = "https://github.com/Alexander-Nasuta/kio-apheris"